# demo

./: .gitignore  Cargo.toml  README.md  succinct.json
circuits/src/: main.rs
contracts/: foundry.toml
contracts/script/: SuccinctAlphaDemo.s.sol  deployAndRequest.sh
contracts/src/: SuccinctAlphaDemo.sol
